Add deviceready event.

--- a/www/spec.html
+++ b/www/spec.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="spec/lib/jasmine-1.2.0/jasmine-html.js"></script>
 
         <!-- include source files here... -->
+        <script type="text/javascript" src="spec/helper.js"></script>
         <script type="text/javascript" src="spec/index.js"></script>
 
         <!-- include spec files here... -->
