Update design of index.html

--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,10 @@
         <title>Hello Cordova</title>
     </head>
     <body>
-        <h1></h1>
-        <p>deviceready... <span id="deviceready">initializing</span></p>
+        <div class="logo"></div>
+        <h1>Apache Cordova™</h1>
+        <p class="report report-off blink">Establishing Connection</p>
+        <p class="report report-on blink hide">Connection Ready</p>
 
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
