Update spec to hide stage area.

--- a/www/spec.html
+++ b/www/spec.html
@@ -45,6 +45,6 @@
         </script>
     </head>
     <body>
-        <div id="stage"></div>
+        <div id="stage" style="display:none;"></div>
     </body>
 </html>
