[app] Use <img> for legacy device support.

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
         <title>Hello Cordova</title>
     </head>
     <body>
-        <div class="logo"></div>
+        <img src="img/cordova.png" />
         <h1>Apache Cordova™</h1>
         <div id="deviceready">
             <p class="status pending blink">Connecting to Device</p>
