[app] Refactor CSS to be more robust.

--- a/www/index.html
+++ b/www/index.html
@@ -8,10 +8,12 @@
         <title>Hello Cordova</title>
     </head>
     <body>
-        <h1>Apache Cordova™</h1>
-        <div id="deviceready">
-            <p class="status pending blink">Connecting to Device</p>
-            <p class="status complete blink hide">Device is Ready</p>
+        <div class="app">
+            <h1>Apache Cordova™</h1>
+            <div id="deviceready">
+                <p class="status pending blink">Connecting to Device</p>
+                <p class="status complete blink hide">Device is Ready</p>
+            </div>
         </div>
 
         <script type="text/javascript" src="js/index.js"></script>
