tweaks from feedback

--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 <script src=cordova.js></script>
 <script>
     document.addEventListener('deviceready', function() {
-        ready.innerText = 'Device is ready';
+        ready.textContent = 'Device is ready';
     });
 </script>
 </body>
