Make charset lowercase

--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -19,7 +19,7 @@
 -->
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <!--
         Customize this policy to fit your own app's needs. For more guidance, see:
             https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
